# F2-Cmax-revisited

./: CMakeLists.txt  README.md  example_config_generate.json  example_config_solve.json  example_config_solve_other_distrib.json
include/: F2CmaxException.h  Instance.h  Parser.h  RadixSort.h  Solver.h
src/: Instance.cpp  Parser.cpp  main.cpp
